[tool.poetry]
name = "transformers-js"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "transformers"}]

[tool.poetry.dependencies]
python = "^3.11"
transformers = {version = "4.38.2", extras = ["torch"]}
onnxruntime = "1.17.1"
optimum = "1.17.1"
onnx = "1.15.0"
onnxconverter-common = "1.14.0"
tqdm = "^4.66.4"
onnxslim = "0.1.31"
numpy = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
