[tool.poetry]
name = "transformers-scripts"
version = "0.1.0"
description = ""
authors = []
packages = [{include = "convert.py"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
transformers-js = "convert:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
