[tool.poetry]
name = "transformers-scripts"
version = "0.1.0"
description = ""
authors = []
packages = [{include = "convert.py"}]

[tool.poetry.dependencies]
python = "^3.11"
# tokenizers 19 introduced breaking changes
tokenizers = "<0.19.0"
transformers = {version = "<4.40", extras = ["torch"]}
#transformers = {version = "4.38.2", extras = ["torch"]}
onnxruntime = "1.18.1"
#onnxruntime = "1.17.1"
#optimum = "1.21.2"
optimum = "1.21.2"
onnx = "1.16.1"
#onnx = "1.15.0"
onnxconverter-common = "1.14.0"
tqdm = "^4.66.4"
onnxslim = "0.1.31"

[tool.poetry.scripts]
transformers-js = "convert:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
